deploy/oidc-browser-disable-console-public-gateway-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lunanexa-console-public-gateway
spec:
  replicas: 0
